--- a/Exercises/Week 1 - Word Embeddings/Exercise-Session-Week-1.ipynb
+++ b/Exercises/Week 1 - Word Embeddings/Exercise-Session-Week-1.ipynb
@@ -66,25 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!conda create -n \"modern_nlp\" python=3.10"
+    "# !pip3 install pandas gensim numpy matplotlib seaborn scikit-learn tqdm torch torchmetrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip3 install pandas gensim numpy matplotlib seaborn scikit-learn tqdm torch torchmetrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,9 +117,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['human', 'interface', 'computer'],\n",
+       " ['survey', 'user', 'computer', 'system', 'response', 'time'],\n",
+       " ['eps', 'user', 'interface', 'system'],\n",
+       " ['system', 'human', 'system', 'eps'],\n",
+       " ['user', 'response', 'time'],\n",
+       " ['trees'],\n",
+       " ['graph', 'trees'],\n",
+       " ['graph', 'minors', 'trees'],\n",
+       " ['graph', 'minors', 'survey']]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# bag of words for each sentence in toy dataset (imported from the gensim library in cell 2)\n",
     "common_texts"
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'w2v_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# dict with vocabulary frequencies\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m words \u001b[38;5;241m=\u001b[39m \u001b[43mw2v_model\u001b[49m\u001b[38;5;241m.\u001b[39mwv\u001b[38;5;241m.\u001b[39mkey_to_index\n\u001b[1;32m      3\u001b[0m words\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'w2v_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# dict with vocabulary frequencies\n",
     "words = w2v_model.wv.key_to_index\n",
@@ -1078,7 +1100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
